plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform' version '2.10.5'
}

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.7.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.7.4'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
    implementation 'org.apache.commons:commons-lang3:3.7'
    implementation 'commons-lang:commons-lang:2.6'
    implementation 'org.jetbrains:annotations:19.0.0'
    implementation 'org.json:json:20180130'
    intellijPlatform {
        intellijIdea '2025.2'
        bundledPlugin 'com.intellij.java'
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType

intellijPlatform {
    pluginVerification {
        ides {
            create IntelliJPlatformType.IntellijIdea, '2025.2'
        }
    }
}

buildSearchableOptions {
    enabled = false
}
